# CHIP8-Emulator

./: .gitignore  CHIP8.sln  CMakeLists.txt  README.md
CHIP8/: CHIP8.vcxproj  CHIP8.vcxproj.filters  CPU.cpp  CPU.h  chip.cpp  chip.h  constants.cpp  constants.h  display.cpp  display.h  log.txt  main.cpp  output.txt
CHIP8/x64/Debug/: CHIP8.exe.recipe  CHIP8.ilk  vc143.idb
CHIP8/x64/Debug/CHIP8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: CPU.cpp  chip.cpp  display.cpp  display.h
src/x64/Debug/CHIP8.tlog/: CHIP8.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog
